--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   },
 	"content_scripts": [
 		{
-			"matches": ["http://11.162.92.90:8080/*"],
+			"matches": [],
 			"js": ["content.js"],
 			"run_at": "document_end"
 		}
